--- a/index.html
+++ b/index.html
@@ -21,11 +21,23 @@
 <!-- End Jekyll SEO tag -->
 
   </head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-W2JC6WK');</script>
+  <!-- End Google Tag Manager -->
 
   <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2JC6WK"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
     <!-- HEADER -->
-    <!--
+
+
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/yiyi2020/yiyi2020.github.io">View on GitHub</a>
@@ -36,7 +48,6 @@
           
         </header>
     </div>
-    -->
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
